--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.20.12",
+    "gatsby-plugin-postcss": "^2.2.3",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.2.0"
   },
   "repository": {
     "type": "git",
