--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.12",
     "gatsby-plugin-postcss": "^2.2.3",
+    "gatsby-plugin-react-helmet": "^3.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
